violating_resources/general/block-wildcard-ingress/samples/block-wildcard-ingress/example_allowed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: # kpt-merge: /non-wildcard-ingress
  name: non-wildcard-ingress
spec:
  rules:
  - host: 'myservice.example.com'
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: example
            port:
              number: 80
